# eDO_core_msgs

./: CMakeLists.txt  package.xml
msg/: JointControl.msg  JointState.msg
